k8s/overlays/local/elasticsearch-kibana-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kibana-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    # springfox swagger-ui uses X-Forwarded-Prefix to find the
    # base url when behind a reverse proxy.
    # nginx-ingress-controller V0.24 has a simple alternative
    # but latest minikube 1.1.0 uses V0.23 (untested):
    # nginx.ingress.kubernetes.io/x-forwarded-prefix: "/study-app"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^/kibana$ /kibana/ permanent;
      proxy_set_header X-Forwarded-Prefix         /kibana/;
    nginx.ingress.kubernetes.io/server-snippet: |
      merge_slashes off;
spec:
  rules:
  - http:
      paths:
      - path: /kibana(/|$)(.*)
        backend:
          serviceName: kibana
          servicePort: 80
